--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://d-ban.github.io/alatke/"
+baseURL = "https://d-ban.github.io/wedevelop/"
 languageCode = "hr"
 title = "Alatke"
 theme = "blackburn"
