--- a/config.toml
+++ b/config.toml
@@ -31,3 +31,9 @@ paginate = 10
         weight = 1
         identifier = "home"
         url = "/"
+      [[menu.main]]
+        name = "Home"
+        pre = "<i class='fa fa-home fa-fw'></i>"
+        weight = 1
+        identifier = "home"
+        url = "/"
