--- a/config.toml
+++ b/config.toml
@@ -31,9 +31,16 @@ paginate = 10
         weight = 1
         identifier = "home"
         url = "/"
+
       [[menu.main]]
-        name = "Home"
-        pre = "<i class='fa fa-home fa-fw'></i>"
-        weight = 1
-        identifier = "home"
-        url = "/"
+        name = "Chmod kalkulator"
+        pre = "<i class='fa fa-calculator fa-fw'></i>"
+        weight = 2
+        identifier = "chmod-kalkulator"
+        url = "/post/chmod-generator/"
+      [[menu.main]]
+        name = "Crontab generator"
+        pre = "<i class='fa fa-calendar fa-fw'></i>"
+        weight = 3
+        identifier = "crontab-generator"
+        url = "/post/crontab-generator"
