--- a/config.toml
+++ b/config.toml
@@ -12,8 +12,8 @@ paginate = 10
     # Shown in the home page
     subtitle = "alatke"
     brand = "Wedevelop"
-    googleAnalytics = "Your Google Analytics tracking ID"
-    disqus = "Your Disqus shortname"
+    googleAnalytics = "UA-63429297-5"
+    disqus = "dban"
     # CSS name for highlight.js
     highlightjs = "androidstudio"
     highlightjs_extra_languages = ["yaml"]
